--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,7 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+// Bootstrap icons
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 
 // Variables
 @import 'variables';
